--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,4 +15,4 @@ jobs:
     - name: init submodule
       run: git submodule init && git submodule update
     - name: Build with Gradle
-      run: ./gradlew shadowJar
+      run: ./gradlew build
