--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: init submodule
         run: git submodule init && git submodule update
       - name: Build with Gradle
-        run: ./gradlew shadowJar -Prelease=${{  github.ref_name }}
+        run: ./gradlew build -Prelease=${{  github.ref_name }}
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
