--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,25 @@
 name: Build
 on: [push, pull_request]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: init submodule
-      run: git submodule init && git submodule update
-    - name: Build with Gradle
-      run: ./gradlew build -Prelease=dev-${{ github.ref_name }}
-    - uses: actions/upload-artifact@v3
-      with:
-        name: motdgg-bukkit-dev-${{  github.ref_name }}
-        path: ./build/libs/motdgg-bukkit-dev-${{ github.ref_name }}.jar
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Set up JDK 1.8
+              uses: actions/setup-java@v3
+              with:
+                  distribution: temurin
+                  java-version: 8
+            - name: Grant execute permission for gradlew
+              run: chmod +x gradlew
+            - name: init submodule
+              run: git submodule init && git submodule update
+            - name: Set outputs
+              id: vars
+              run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> GITHUB_ENV
+            - name: Build with Gradle
+              run: ./gradlew build -Prelease=dev-${COMMIT_HASH}
+            - uses: actions/upload-artifact@v3
+              with:
+                  name: motdgg-bukkit-dev-${{  github.ref_name }}
+                  path: ./build/libs/motdgg-bukkit-dev-${COMMIT_HASH}.jar
