--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
     id "com.modrinth.minotaur" version "2.+"
+    id "xyz.jpenilla.run-paper" version "2.0.1"
 }
 
 version = project.hasProperty('release') ? project.getProperty('release') : 'dev'
@@ -14,6 +16,8 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:23.0.0'
+    implementation "net.kyori:adventure-api:4.13.0"
+    implementation "net.kyori:adventure-platform-bukkit:4.2.0"
 }
 
 processResources {
@@ -22,6 +26,18 @@ processResources {
     filesMatching("plugin.yml") {
         expand "version": project.version
     }
+}
+
+tasks {
+    runServer {
+        minecraftVersion("1.8.8")
+    }
+}
+
+shadowJar {
+    from sourceSets.main.allSource
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    archiveFileName = "motdgg-bukkit-${project.version}.jar"
 }
 
 modrinth {
