--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ shadowJar {
 modrinth {
     token = System.getenv("MODRINTH_TOKEN")
     projectId = "VPo0otUH"
-    uploadFile = "shadowJar"
+    uploadFile = "motdgg-bukkit-${project.version}.jar"
     gameVersions = [
             "1.19.4",
             "1.19.3",
